# calculator-web_2nd

./: .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/calc/: __init__.py  app.py  logic.py  ui.py
tests/: test_logic.py
