[build-system]
requires = ['setuptools>=67', 'wheel']
build-backend = 'setuptools.build_meta'

[project]
name = 'calculator-web-2nd'
version = '0.1.0'
description = 'Tkinter desktop calculator with safe evaluation'
authors = [{ name = 'Futaba Ario' }]
readme = 'README.md'
requires-python = '>=3.12'
dependencies = []

[project.optional-dependencies]
dev = ['pytest>=7.4', 'black>=23.12', 'ruff>=0.4', 'pyinstaller>=6.3']

[tool.setuptools.packages.find]
where = ['src']

[tool.pytest.ini_options]
pythonpath = ['src']
addopts = '-ra'

[tool.black]
line-length = 88
target-version = ['py312']

[tool.ruff]
line-length = 88
target-version = 'py312'

[tool.ruff.lint]
select = ['E', 'F', 'I']

[tool.ruff.format]
quote-style = 'double'
